--- a/Deep_Fraude_tarjetas_crédito.ipynb
+++ b/Deep_Fraude_tarjetas_crédito.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1> Marc JOVANÍ y Laura OLIVA - Ejercicio 6.7 - Keras<span class=\"tocSkip\"></span></h1>\n",
+    "<h1> Laura OLIVA - Ejercicio 6.7 - Keras<span class=\"tocSkip\"></span></h1>\n",
     "\n",
     "En este ejercició tenemos un set de datos con las transacciones realizadas con tarjetas de credito de un banco.\n",
     "\n",
